[gd_scene load_steps=27 format=3 uid="uid://bdg6fw6a2xqi1"]

[ext_resource type="Theme" uid="uid://bcvvqrqeokira" path="res://barkley2/themes/cc.tres" id="1_4kam0"]
[ext_resource type="Script" path="res://barkley2/scripts/CC/cc_crest.gd" id="1_f7hiq"]
[ext_resource type="Texture2D" uid="uid://bxg6wr8ogbdrh" path="res://barkley2/assets/b2_original/images/cc/s_cc_crest_frames_0.png" id="2_58iwd"]
[ext_resource type="Texture2D" uid="uid://57u2ligyisy6" path="res://barkley2/assets/b2_original/images/cc/s_cc_crest_frames_1.png" id="3_0g1rr"]
[ext_resource type="Script" path="res://barkley2/scripts/CC/cc_crest_frames.gd" id="4_1d4yd"]
[ext_resource type="Texture2D" uid="uid://b0wpaywycipju" path="res://barkley2/assets/b2_original/images/cc/s_cc_crest_paint_button_0.png" id="4_05xbt"]
[ext_resource type="Texture2D" uid="uid://i0a6yl84tkhc" path="res://barkley2/assets/b2_original/images/cc/s_cc_crest_paint_button_2.png" id="5_wbaic"]
[ext_resource type="Texture2D" uid="uid://dr13jxh4rew5y" path="res://barkley2/assets/b2_original/images/cc/s_cc_crest_paint_button_1.png" id="6_nqx5t"]
[ext_resource type="Texture2D" uid="uid://dvgbf8ol4c45g" path="res://barkley2/assets/b2_original/images/cc/s_cc_crest_paint_button_3.png" id="7_xmipd"]
[ext_resource type="Texture2D" uid="uid://c6rouewcxml2p" path="res://barkley2/assets/b2_original/images/cc/s_cc_crest_paint_button_5.png" id="8_w8db6"]
[ext_resource type="Texture2D" uid="uid://yf3tugx4vgm2" path="res://barkley2/assets/b2_original/images/cc/s_cc_crest_paint_button_4.png" id="9_oljin"]
[ext_resource type="Texture2D" uid="uid://hyo6tufk5x1r" path="res://barkley2/assets/b2_original/images/cc/s_cc_crest_paint_button_6.png" id="10_ifioy"]
[ext_resource type="Texture2D" uid="uid://d0wso6o0dpiih" path="res://barkley2/assets/b2_original/images/cc/s_cc_crest_paint_button_8.png" id="11_1p26p"]
[ext_resource type="Texture2D" uid="uid://cr2drvcx6b5tf" path="res://barkley2/assets/b2_original/images/cc/s_cc_crest_paint_button_7.png" id="12_npx2e"]
[ext_resource type="Texture2D" uid="uid://dbjx7phy4qcw8" path="res://barkley2/assets/b2_original/images/cc/s_cc_crest_paint_button_9.png" id="13_kovxt"]
[ext_resource type="Texture2D" uid="uid://dp73tncffmvlv" path="res://barkley2/assets/b2_original/images/cc/s_cc_crest_paint_button_11.png" id="14_8n4sf"]
[ext_resource type="Texture2D" uid="uid://cno21jud3jjus" path="res://barkley2/assets/b2_original/images/cc/s_cc_crest_paint_button_10.png" id="15_urhld"]
[ext_resource type="Texture2D" uid="uid://dtbndhntypmt7" path="res://barkley2/assets/b2_original/images/cc/s_cc_crest_paint_button_12.png" id="16_m4hh1"]
[ext_resource type="Texture2D" uid="uid://cbevjo85rq276" path="res://barkley2/assets/b2_original/images/cc/s_cc_crest_paint_button_14.png" id="17_656dj"]
[ext_resource type="Texture2D" uid="uid://brg3usuprh7fm" path="res://barkley2/assets/b2_original/images/cc/s_cc_crest_paint_button_13.png" id="18_nodcd"]
[ext_resource type="Texture2D" uid="uid://dl11twnna5obu" path="res://barkley2/assets/b2_original/images/cc/s_cc_crest_paint_button_15.png" id="19_duf20"]
[ext_resource type="Texture2D" uid="uid://faq1j5nt0l31" path="res://barkley2/assets/b2_original/images/cc/s_cc_crest_paint_button_17.png" id="20_p5788"]
[ext_resource type="Texture2D" uid="uid://ghfhet0rx5sg" path="res://barkley2/assets/b2_original/images/cc/s_cc_crest_paint_button_16.png" id="21_nxh8r"]
[ext_resource type="Texture2D" uid="uid://b7f0orkkaro4" path="res://barkley2/assets/b2_original/images/cc/s_cc_button_accept_0.png" id="23_ef844"]
[ext_resource type="FontFile" uid="uid://cbgm2fhhwo0ld" path="res://barkley2/resources/fonts/fn2.tres" id="24_r705q"]

[sub_resource type="ButtonGroup" id="ButtonGroup_rb8l6"]

[node name="cc_crest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_4kam0")
script = ExtResource("1_f7hiq")

[node name="crest_bg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="crest_frames" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 18.0
offset_right = 304.0
offset_bottom = 174.0
texture = ExtResource("2_58iwd")
script = ExtResource("4_1d4yd")

[node name="crest_canvas" type="TextureRect" parent="crest_frames"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="crest_frames_fg" type="TextureRect" parent="crest_frames"]
layout_mode = 0
offset_right = 224.0
offset_bottom = 156.0
texture = ExtResource("3_0g1rr")

[node name="red_btn" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
toggle_mode = true
button_group = SubResource("ButtonGroup_rb8l6")
texture_normal = ExtResource("4_05xbt")
texture_pressed = ExtResource("5_wbaic")
texture_hover = ExtResource("6_nqx5t")

[node name="yellow_btn" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
toggle_mode = true
button_group = SubResource("ButtonGroup_rb8l6")
texture_normal = ExtResource("7_xmipd")
texture_pressed = ExtResource("8_w8db6")
texture_hover = ExtResource("9_oljin")

[node name="blue_btn" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
toggle_mode = true
button_group = SubResource("ButtonGroup_rb8l6")
texture_normal = ExtResource("10_ifioy")
texture_pressed = ExtResource("11_1p26p")
texture_hover = ExtResource("12_npx2e")

[node name="green_btn" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
toggle_mode = true
button_group = SubResource("ButtonGroup_rb8l6")
texture_normal = ExtResource("13_kovxt")
texture_pressed = ExtResource("14_8n4sf")
texture_hover = ExtResource("15_urhld")

[node name="purple_btn" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
toggle_mode = true
button_group = SubResource("ButtonGroup_rb8l6")
texture_normal = ExtResource("16_m4hh1")
texture_pressed = ExtResource("17_656dj")
texture_hover = ExtResource("18_nodcd")

[node name="gray_btn" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
toggle_mode = true
button_group = SubResource("ButtonGroup_rb8l6")
texture_normal = ExtResource("19_duf20")
texture_pressed = ExtResource("20_p5788")
texture_hover = ExtResource("21_nxh8r")

[node name="accept_btn" type="TextureRect" parent="."]
z_index = 10
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = 60.0
offset_right = 40.0
offset_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("23_ef844")

[node name="accept_lbl" type="Label" parent="accept_btn"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -11.5
offset_right = 26.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("24_r705q")
text = "Accept"
horizontal_alignment = 1
vertical_alignment = 1

[node name="accept_btn_bg" type="ColorRect" parent="accept_btn"]
z_index = -1
offset_left = 10.0
offset_top = 8.0
offset_right = 70.0
offset_bottom = 24.0
color = Color(0.235, 0, 0.353, 0.5)
